# httptools

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build-manylinux-wheels.sh  release-trigger.yml  release.yml  test-wheels.sh  tests-reqs.txt  tests.yml
httptools/: __init__.py  _http.py  _version.py  parser.pyi
httptools/parser/: .gitignore  __init__.py  cparser.pxd  errors.py  parser.pyi  parser.pyx  protocol.py  uparser.pxd  url_parser.pyi  url_parser.pyx
httptools/parser/url_parser/: Cargo.toml
httptools/parser/url_parser/src/: lib.rs
tests/: test_parser.py
