[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==80.9.0"]

[project]
name = "httptools"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Web Environment",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
authors = [
    {name = "Yury Selivanov", email="yury@magic.io"},
]
license = "MIT"
license-files = ["LICENSE"]
description = "A collection of framework independent HTTP protocol utils."
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MagicStack/httptools"

[project.optional-dependencies]
test = []  # for backward compatibility
